--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,19 @@
       <artifactId>javamelody-spring-boot-starter</artifactId>
       <version>1.73.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <version>2.2.0.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.18</version>
+      <scope>provided</scope>
+    </dependency>
+
+
 
     <!--*************************************************************-->
 
@@ -62,7 +75,7 @@
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
-      <version>3.2.1</version>
+      <version>3.1</version>
     </dependency>
 
     <!-- 用于修改字节码-->
