--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+        xmlns="http://maven.apache.org/POM/4.0.0"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>org.example</groupId>
   <artifactId>MTV</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
-
   <name>MTV Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -43,7 +40,7 @@
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
-      <version>1.2.29</version>
+      <version>1.2.24</version>
     </dependency>
     <dependency>
       <groupId>net.bull.javamelody</groupId>
@@ -61,23 +58,22 @@
       <version>1.18.18</version>
       <scope>provided</scope>
     </dependency>
-
-
-
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.17</version>
+    </dependency>
     <!--*************************************************************-->
-
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
       <version>4.0</version>
     </dependency>
-
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
       <version>3.1</version>
     </dependency>
-
     <!-- 用于修改字节码-->
     <dependency>
       <groupId>org.javassist</groupId>
@@ -91,16 +87,13 @@
       <version>5.1.45</version>
     </dependency>
     <!--*****************************数据库驱动部分********************************-->
-
     <!--*****************************连接池********************************-->
     <dependency>
       <groupId>com.mchange</groupId>
       <artifactId>c3p0</artifactId>
       <version>0.9.5.4</version>
     </dependency>
-
     <!--*****************************连接池********************************-->
-
     <!--*****************************日志********************************-->
     <dependency>
       <groupId>log4j</groupId>
@@ -108,7 +101,6 @@
       <version>1.2.11</version>
     </dependency>
     <!--*****************************日志********************************-->
-
     <!--*****************************jackson********************************-->
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
@@ -116,7 +108,6 @@
       <version>1.9.9</version>
     </dependency>
     <!--*****************************jackson********************************-->
-
     <!--*****************************jsp-api********************************-->
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -125,7 +116,6 @@
       <scope>provided</scope>
     </dependency>
     <!--*****************************jsp-api********************************-->
-
     <!--*****************************jstl********************************-->
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -133,7 +123,6 @@
       <version>1.2</version>
     </dependency>
     <!--*****************************jstl********************************-->
-
     <!--*****************************cglib********************************-->
     <dependency>
       <groupId>cglib</groupId>
@@ -141,7 +130,6 @@
       <version>3.3.0</version>
     </dependency>
     <!--*****************************cglib********************************-->
-
     <!--*****************************aspectj********************************-->
     <dependency>
       <groupId>org.aspectj</groupId>
@@ -149,7 +137,6 @@
       <version>1.9.4</version>
     </dependency>
     <!--*****************************aspectj********************************-->
-
     <!--*****************************spring部分********************************-->
     <!--spring-core-->
     <dependency>
@@ -169,7 +156,6 @@
       <artifactId>spring-context-support</artifactId>
       <version>5.1.2.RELEASE</version>
     </dependency>
-
     <!--spring-tx-->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -188,7 +174,6 @@
       <artifactId>spring-oxm</artifactId>
       <version>5.1.2.RELEASE</version>
     </dependency>
-
     <!--spring-web-->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -221,13 +206,10 @@
     </dependency>
     <!--*****************************spring部分********************************-->
   </dependencies>
-  <modules>
-    <module>SpeLINJ</module>
-  </modules>
-
   <build>
     <finalName>MTV</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement>
+      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
